--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -2,6 +2,25 @@ website:
   sidebar:
     contents:
       - index.ipynb
-      - 00_core.ipynb
-      - 22_12_23_torch.nn.ipynb
-      - 23_1_6_unet噪音去除.ipynb
+      - section: blog
+        contents:
+          - blog/index.qmd
+          - section: posts
+            contents:
+              - section: 12_23_torch.nn
+                contents:
+                  - blog/posts/22_12_23_torch.nn/22_12_23_torch.nn.ipynb
+      - section: blog
+        contents:
+          - section: posts
+            contents:
+              - section: 01_06_unet噪音去除
+                contents:
+                  - blog/posts/23_01_06_unet噪音去除/23_01_06_unet噪音去除.ipynb
+      - section: blog
+        contents:
+          - section: posts
+            contents:
+              - section: 03_08_wcpdtoolbox
+                contents:
+                  - blog/posts/23_03_08_wcpdtoolbox/23_03_08_wcpdtoolbox.ipynb
